# breast_cancer_classifier

./: main.py  pyproject.toml
core/: breast_cancer.ipynb
core/model/: breast_cancer_predictor.keras
